# WordleGuessing

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: windows-release.yml
docs/: release-guide.md
packaging/windows/: version_info.txt
scripts/: build_windows.ps1
source_code/: __main__.py  app.py
source_code/application/: controller.py
source_code/domain/: word_filtering_service.py
source_code/infrastructure/: data_set_builder.py  data_set_handler.py
source_code/presentation/: guess_tile.py  letter_input.py  view.py
source_code/utility/constant/: color.py  keys.py  paths.py  types.py
source_code/utility/helper/: app_paths.py  default_dict_set.py  io_wrapper.py
test/: conftest.py
test/unit_test/app/: test_app.py
test/unit_test/application/: test_controller.py
test/unit_test/domain/: test_word_filtering_service.py  test_word_filtering_service_constants.py
test/unit_test/infrastructure/: test_data_set_builder.py  test_data_set_handler.py
test/unit_test/presentation/: test_letter_input.py  test_view.py
test/unit_test/utility/: test_app_paths.py
